@@ -1,3 +1,8 @@
+Fix arp checking
+linux-2.6.19 headers NOW don't work with c99 which is just wrong, so
+dhcpcd no longer builds against these kernel headers. You get a nice
+error though :)
+
 dhcpcd-3.0.7
 Allow Linux to use Token Ring again as Linux does not have any more hardware
 specific code. BPF needs a patch for Token Ring support.
